Bug 692596 - memory leaks in rinkj-epson870.c
Summary: memory leaks in rinkj-epson870.c
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Printer Driver (show other bugs)
Version: master
Hardware: PC Linux
: P4 normal
Assignee: Default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-14 16:02 UTC by Tim Waugh
Modified: 2011-10-30 05:12 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments
0003-Fixed-memory-leaks-in-rinkj-epson870.c-found-using-C.patch (1.67 KB, patch)
2011-10-14 16:02 UTC, Tim Waugh
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Waugh 2011-10-14 16:02:33 UTC
Created attachment 8006 [details]
0003-Fixed-memory-leaks-in-rinkj-epson870.c-found-using-C.patch

There are memory leaks in rinkj-epson870.c, found using Coverity.
Comment 1 Alex Cherepanov 2011-10-30 05:12:47 UTC
The patch has been adopted and committed as a rev.
8adebdf0f6e87f36792637ff88db874ea86fd803

Thank you for your contribution to Ghostscript.