Bug 692596: fix memory leaks in rinkj-epson870.c.

There were a few memory leaks in rinkj-epson870.c in error handling
branches, found using Coverity.